--- a/mixtral.jinja
+++ b/mixtral.jinja
@@ -1,12 +1,15 @@
-{% for message in messages %}
-  {% if message['role'] == 'user' %}
-    ### Instruction:
-    <s>[INST] {{ message['content'] | trim }} [/INST]
-  {% elif message['role'] == 'assistant' %}
-    ### Response:
-    {{ message['content'] | trim }}
-  {% endif %}
-{% endfor %}
-{% if add_generation_prompt and messages[-1]['role'] != 'assistant' %}
-    <s>[INST]### Response Placeholder: [/INST]
+{{- bos_token -}}
+{% if bos_token|length > 0 %}
+    {{- ' ' -}}
 {% endif %}
+{% for message in messages %}
+    {% if message['role'] == 'system' %}
+        {{- message['content'] -}}
+    {% elif message['role'] == 'user' %}
+        {{- '[INST] ' + message['content'] + ' [/INST]' -}}
+    {% elif message['role'] == 'assistant' %}
+        {{- message['content'] + eos_token -}}
+    {% else %}
+        {{ raise_exception('Only user, assistant, and system roles are supported!') }}
+    {% endif %}
+{% endfor %}
