Templates: Update meta for cohere
Signed-off-by: kingbri <bdashore3@proton.me>

--- a/cohere-command-r.jinja
+++ b/cohere-command-r.jinja
@@ -1,3 +1,6 @@
+{# Metadata #}
+{% set stop_strings = ["<|START_OF_TURN_TOKEN|>", "<|END_OF_TURN_TOKEN|>"] %}
+
 {{- bos_token -}}
 {% if bos_token|length > 0 %}
     {{- '\n' -}}
