Templates: Modify to fix metadata
Removes extra whitespace that can be rendered.

Signed-off-by: kingbri <bdashore3@proton.me>

--- a/cohere-command-r.jinja
+++ b/cohere-command-r.jinja
@@ -1,6 +1,7 @@
 {# Metadata #}
-{% set stop_strings = ["<|START_OF_TURN_TOKEN|>", "<|END_OF_TURN_TOKEN|>"] %}
+{%- set stop_strings = ["<|START_OF_TURN_TOKEN|>", "<|END_OF_TURN_TOKEN|>"] -%}
 
+{# Template #}
 {{- bos_token -}}
 {% if messages[0]['role'] == 'system' %}
     {% set loop_messages = messages[1:] %}
