--- a/tool_calls/llama3_fire_function_v2.jinja
+++ b/tool_calls/llama3_fire_function_v2.jinja
@@ -1,7 +1,7 @@
 {# Metadata #} 
-{% set stop_strings = ["<|im_start|>", "<|im_end|>"] %}
-{% set message_roles = ['system', 'user', 'assistant', 'tool'] %}
-{% set tool_start = "functools" %}
+{%- set stop_strings = ["<|im_start|>", "<|im_end|>"] -%}
+{%- set message_roles = ['system', 'user', 'assistant', 'tool'] -%}
+{%- set tool_start = "functools" -%}
 {%- set start_header = "<|start_header_id|>" -%} 
 {%- set end_header = "<|end_header_id|>\n" -%}
 
