--- a/tool_calls/groq_tool_use.jinja
+++ b/tool_calls/groq_tool_use.jinja
@@ -7,7 +7,7 @@
 {%- set start_header = "<|start_header_id|>" -%} 
 {%- set end_header = "<|end_header_id|>\n" -%}
 
-{%- set example_tool_call = '[
+{%- set example_tool_call -%}[
     {
         "id": "tool_id_1342",
         "function": {
@@ -24,28 +24,31 @@
         },
         "type": "function"
     }
-]' -%}
+]
+{%- endset -%}
 
-{%- set inital_system_prompt = 'You are an assistant that has access to the following set of tools, to call a tool:
-1. Prefix calls with ' + tool_start  + ' and end calls with ' + tool_end + '
+{%- set inital_system_prompt -%}You are an assistant that has access to the following set of tools, to call a tool:
+1. Prefix calls with '{{ tool_start }}' and end calls with '{{ tool_end }}'
 2. Ensure you use the correct type for arguments. For example, if the argument is a string, ensure it is enclosed in quotes, otherwise, it should not be.
 3. Generate all calls using the following json tool call format. Here is a multi tool call example:
 
-' + tool_start + example_tool_call + tool_end + '
+{{ tool_start }}{{ example_tool_call }}{{ tool_end }}
 
 Here are the tools available for you to call:
 <tools>
-' + tools_json + '
-</tools>' -%}
+{{ tools_json }}
+</tools>
+{%- endset -%}
 
-{%- set tool_reminder = 'Available Tools:
-' + tools_json + '
+{%- set tool_reminder -%}Available Tools:
+{{ tools_json }}
 
 Tool Call Format Example:
-' + tool_start + example_tool_call + '
+{{ tool_start }}{{ example_tool_call }}
 
-Prefix & Suffix: Begin tool calls with ' + tool_start + ' and end with ' + tool_end + '.
-Argument Types: Use correct data types for arguments (e.g., strings in quotes, numbers without).' -%}
+Prefix & Suffix: Begin tool calls with {{ tool_start }} and end with {{ tool_end }}.
+Argument Types: Use correct data types for arguments (e.g., strings in quotes, numbers without).
+{%- endset -%}
 
 {# Template #}
 
